@@ -11,6 +11,8 @@ and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic
 
 === added
 
+* possibiblity to change the search form
+
 === changed
 
 == 3.4.1 - 2024-09-05
